<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="ViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="ViewController" customModule="FizzBuzz" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3wa-SY-FnE">
                                <rect key="frame" x="536" y="20" width="44" height="40"/>
                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
                                <state key="normal" title="3 / 5">
                                    <color key="titleColor" red="0.55294117649999996" green="0.77647058820000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                            </button>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EAa-24-jho">
                                <rect key="frame" x="60" y="60" width="480" height="480"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TL5-wp-Ip6">
                                        <rect key="frame" x="0.0" y="0.0" width="230.5" height="230.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="NumberButton"/>
                                        <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="70"/>
                                        <state key="normal" title="0" backgroundImage="ButtonBorder">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <connections>
                                            <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yfq-6a-GdY"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3q4-8J-QSw">
                                        <rect key="frame" x="249" y="0.0" width="230.5" height="230.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="FizzButton"/>
                                        <state key="normal" image="Champagne" backgroundImage="ButtonBorder">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <connections>
                                            <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ty3-Eu-GMb"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9bY-R3-n6M">
                                        <rect key="frame" x="0.0" y="249" width="230.5" height="230.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="BuzzButton"/>
                                        <state key="normal" image="Lightning" backgroundImage="ButtonBorder">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <connections>
                                            <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="sXT-tc-TVE"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qDB-Md-U1i">
                                        <rect key="frame" x="249" y="249.5" width="230.5" height="230.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="FizzBuzzButton"/>
                                        <state key="normal" image="Space" backgroundImage="ButtonBorder">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <connections>
                                            <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bHU-nd-jSb"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                <constraints>
                                    <constraint firstItem="9bY-R3-n6M" firstAttribute="height" secondItem="TL5-wp-Ip6" secondAttribute="height" id="26k-KF-KVx"/>
                                    <constraint firstAttribute="trailing" secondItem="qDB-Md-U1i" secondAttribute="trailing" id="BLk-zq-oIe"/>
                                    <constraint firstAttribute="trailing" secondItem="3q4-8J-QSw" secondAttribute="trailing" id="DA6-ty-IlH"/>
                                    <constraint firstItem="9bY-R3-n6M" firstAttribute="width" secondItem="TL5-wp-Ip6" secondAttribute="width" id="Oti-ZO-8te"/>
                                    <constraint firstItem="3q4-8J-QSw" firstAttribute="height" secondItem="TL5-wp-Ip6" secondAttribute="height" id="QXQ-OG-Ilp"/>
                                    <constraint firstItem="qDB-Md-U1i" firstAttribute="width" secondItem="TL5-wp-Ip6" secondAttribute="width" id="QwR-Ez-wmu"/>
                                    <constraint firstItem="TL5-wp-Ip6" firstAttribute="width" secondItem="EAa-24-jho" secondAttribute="width" multiplier="0.48" id="S2O-It-2v4"/>
                                    <constraint firstItem="9bY-R3-n6M" firstAttribute="leading" secondItem="EAa-24-jho" secondAttribute="leading" id="UJj-NC-9jG"/>
                                    <constraint firstAttribute="bottom" secondItem="9bY-R3-n6M" secondAttribute="bottom" id="WV9-oJ-cRh"/>
                                    <constraint firstItem="3q4-8J-QSw" firstAttribute="width" secondItem="TL5-wp-Ip6" secondAttribute="width" id="Ymd-Aa-MbD"/>
                                    <constraint firstItem="3q4-8J-QSw" firstAttribute="top" secondItem="EAa-24-jho" secondAttribute="top" id="eCI-Cx-635"/>
                                    <constraint firstItem="TL5-wp-Ip6" firstAttribute="height" secondItem="EAa-24-jho" secondAttribute="height" multiplier="0.48" id="fJ7-mY-u3i"/>
                                    <constraint firstAttribute="width" secondItem="EAa-24-jho" secondAttribute="height" multiplier="1:1" id="hyv-HU-QZt"/>
                                    <constraint firstItem="TL5-wp-Ip6" firstAttribute="top" secondItem="EAa-24-jho" secondAttribute="top" id="kB5-82-oAP"/>
                                    <constraint firstItem="qDB-Md-U1i" firstAttribute="height" secondItem="TL5-wp-Ip6" secondAttribute="height" id="lt9-bl-tYn"/>
                                    <constraint firstItem="TL5-wp-Ip6" firstAttribute="leading" secondItem="EAa-24-jho" secondAttribute="leading" id="nYx-a3-b4v"/>
                                    <constraint firstAttribute="bottom" secondItem="qDB-Md-U1i" secondAttribute="bottom" constant="0.5" id="zX2-au-VbP"/>
                                </constraints>
                            </view>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="olo-LR-a7N">
                                <rect key="frame" x="481" y="552" width="99" height="40"/>
                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
                                <state key="normal" title="Play Again">
                                    <color key="titleColor" red="0.55294117647058827" green="0.77647058823529413" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="0.89411764705882346" green="0.94509803921568625" blue="0.99607843137254903" alpha="1" colorSpace="calibratedRGB"/>
                        <constraints>
                            <constraint firstItem="EAa-24-jho" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="4ea-E6-IuZ"/>
                            <constraint firstItem="EAa-24-jho" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Kn0-PZ-umM"/>
                            <constraint firstItem="EAa-24-jho" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="40" id="R6b-ZY-2WS"/>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="olo-LR-a7N" secondAttribute="bottom" constant="8" id="Tf7-IU-s8t"/>
                            <constraint firstAttribute="trailingMargin" secondItem="olo-LR-a7N" secondAttribute="trailing" id="UUn-ya-tOU"/>
                            <constraint firstAttribute="trailingMargin" secondItem="3wa-SY-FnE" secondAttribute="trailing" id="aar-bZ-2TB"/>
                            <constraint firstItem="3wa-SY-FnE" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="hT9-h9-Bb8"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="buzzButton" destination="9bY-R3-n6M" id="3fJ-xl-BGE"/>
                        <outlet property="fizzButton" destination="3q4-8J-QSw" id="rLs-in-2HC"/>
                        <outlet property="numberButton" destination="TL5-wp-Ip6" id="99O-6u-Glg"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="375" y="348"/>
        </scene>
    </scenes>
    <resources>
        <image name="ButtonBorder" width="400" height="400"/>
        <image name="Champagne" width="80" height="82"/>
        <image name="Lightning" width="47" height="80"/>
        <image name="Space" width="75" height="80"/>
    </resources>
</document>
